--- a/app/res/layout/announcement.xml
+++ b/app/res/layout/announcement.xml
@@ -18,6 +18,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" />
 
+    <TextView
+        android:id="@+id/tvAnnouncementNothing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/nothing"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
     <ListView
         android:id="@+id/lvAnnouncement"
         android:layout_width="match_parent"
