--- a/app/res/menu/ribbon_menu.xml
+++ b/app/res/menu/ribbon_menu.xml
@@ -2,7 +2,7 @@
 <menu
   xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/ribbon_menu_featured" android:title="@string/menu_featured" android:icon="@drawable/ic_menu_featured"></item>
-    <item android:id="@+id/ribbon_menu_favorites" android:title="@string/menu_favorites" android:icon="@drawable/ic_menu_favorites"></item>
+    <!-- <item android:id="@+id/ribbon_menu_favorites" android:title="@string/menu_favorites" android:icon="@drawable/ic_menu_favorites"></item> -->
     <item android:id="@+id/ribbon_menu_categories" android:title="@string/menu_categories" android:icon="@drawable/ic_menu_categories"></item>
     <item android:id="@+id/ribbon_menu_map" android:title="@string/menu_map" android:icon="@drawable/ic_menu_map"></item>
     <item android:id="@+id/ribbon_menu_settings" android:title="@string/menu_settings" android:icon="@drawable/ic_menu_settings"></item>
