--- a/app/res/layout/setting.xml
+++ b/app/res/layout/setting.xml
@@ -69,6 +69,13 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp" />
 
+        <Button
+            android:id="@+id/bPingServer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/ping_server" />
+
     </LinearLayout>
 
 </ScrollView>
